append 2 lesson